# aoptk_ext

./: .copier-answers.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.dev.md  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  documentation.yml  next_steps_citation_issue.md  next_steps_linting_issue.md  next_steps_online_documentation_issue.md  next_steps_sonarcloud_issue.md  next_steps_zenodo_issue.md  publish.yml
docs/: Makefile  conf.py  index.rst  make.bat
src/aoptk_ext/: __init__.py  generate_slides.py  my_module.py  regex_sentence_generator.py  sentence.py  sentence_generator.py  slide.py  slide_generator.py  spacy_models.py  spacy_text_processor.py
src/aoptk_ext/abbreviations/: abbreviation_translator.py  abbreviation_translator_dictionary.py  abbreviation_translator_dictionary_generator.py
src/aoptk_ext/application/: chemical_identifier.py  publication_tracker.py
src/aoptk_ext/cleaning/: html_tag_remover.py  text_cleaner.py
src/aoptk_ext/literature/: abbreviations.py  spacy_pdf_processor.py
src/aoptk_ext/normalization/: pubchem_abbreviation_short.py  pubchem_abbreviation_uppercase.py
src/aoptk_ext/relationships/: zero_shot_classification.py  zero_shot_classification_multiple.py  zero_shot_classification_single.py
tests/: conftest.py  test_abbreviation_translator_dictionary.py  test_abbreviation_translator_dictionary_generator.py  test_cleaning.py  test_generate_slides.py  test_my_module.py  test_pubchem_abbreviation_short.py  test_pubchem_abbreviation_uppercase.py  test_regex_sentence_generator.py  test_spacy_pdf_processor.py  test_spacy_text_processor.py  test_spacy_text_processor_mocked.py  test_zero_shot_classification_multiple.py  test_zero_shot_classification_single.py
tests/test-data/: PMC12181427.txt  PMC12231352.txt  PMC12416454.txt
